-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.0, 4.6.1
-
None
-
Kubuntu 8.04 32bit / X11 using NVidia's proprietary driver (190.53) with multihead (no Xinerama)
-
0d27306664188a61571d31a38fec1d9040aae5f6
I'm using a QGraphicView with a QGLWidget set as viewport in my multihead application, rendering of QPixmap does non't work on secondary screen.
I have destilled this problem into a small sample application, see attachment.
I'm getting these XErrors printed (same appear when running my application) once:
X Error: BadDrawable (invalid Pixmap or Window parameter) 9
Extension: 145 (Uknown extension)
Minor opcode: 4 (Unknown request)
Resource id: 0x4e0001c
X Error: GLXBadPixmap 156
Extension: 142 (Uknown extension)
Minor opcode: 16 (Unknown request)
Resource id: 0x4e00021
This may be related to the usage of the global qt_gl_share_widget() (referring to the primary application screen) which is used at various places in your GL code, but this is just a quick guess.
Note that using pixmaps w/o OpenGL works fine on secondary screens in my setup.
With kind regards, Bjoern Toschi